--- a/time.html
+++ b/time.html
@@ -24,7 +24,7 @@ label,a
 
 <body>
 <h1>Contact us</h1>
-<form method="POST" name="contactform" action="contact-form-handler.php"> 
+<form method="POST" name="contactform" action="contact-form-handler.html"> 
 <p>
 <label for='name'>Your Name:</label> <br>
 <input type="text" name="name">
