--- a/time1.html
+++ b/time1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"> 
+
 <html>
 <head>
 	<title>Contact us</title>
@@ -16,15 +16,13 @@ label,a
 	font-size : 12px; 
 }
 
-</style>	
-<!-- a helper script for vaidating the form-->
-<script language="JavaScript" src="scripts/gen_validatorv31.js" type="text/javascript"></script>
-</head>	
+</style>
 </head>
 
 <body>
 <h1>Contact us</h1>
-<form method="POST" name="contactform" action="contact-form-handler.html"> 
+<form action="https://formspree.io/safdar.kowda@yahoo.com"
+      method="POST">
 <p>
 <label for='name'>Your Name:</label> <br>
 <input type="text" name="name">
@@ -40,19 +38,6 @@ label,a
 <input type="submit" value="Submit"><br>
 </form>
 
-<script language="JavaScript">
-// Code for validating the form
-// Visit http://www.javascript-coder.com/html-form/javascript-form-validation.phtml
-// for details
-var frmvalidator  = new Validator("contactform");
-frmvalidator.addValidation("name","req","Please provide your name"); 
-frmvalidator.addValidation("email","req","Please provide your email"); 
-frmvalidator.addValidation("email","email","Please enter a valid email address"); 
-</script>
-<!--
-Sample code from:
-http://www.html-form-guide.com/contact-form/php-email-contact-form.html
--->
 
 
 </body>
