--- a/time1.html
+++ b/time1.html
@@ -1,44 +1,16 @@
-
+ <!DOCTYPE html>
 <html>
-<head>
-	<title>Contact us</title>
-<!-- define some style elements-->
-<style>
-h1
-{
-	font-family : Arial, Helvetica, sans-serif;
-	font-size : 16px;
-    font-weight : bold;
-}
-label,a 
-{
-	font-family : Arial, Helvetica, sans-serif;
-	font-size : 12px; 
-}
-
-</style>
-</head>
-
+<title>HTML Tutorial</title>
 <body>
-<h1>Contact us</h1>
-<form action="https://formspree.io/safdar.kowda@yahoo.com"
+
+
+
+
+<form action="https://formspree.io/your@email.com"
       method="POST">
-<p>
-<label for='name'>Your Name:</label> <br>
-<input type="text" name="name">
-</p>
-<p>
-<label for='email'>Email Address:</label> <br>
-<input type="text" name="email"> <br>
-</p>
-<p>
-<label for='message'>Message:</label> <br>
-<textarea name="message"></textarea>
-</p>
-<input type="submit" value="Submit"><br>
-</form>
-
-
-
+    <input type="text" name="name">
+    <input type="email" name="_replyto">
+    <input type="submit" value="Send">
+</form> 
 </body>
-</html>
+</html> 
