--- a/time1.html
+++ b/time1.html
@@ -6,7 +6,7 @@
 
 
 
-<form action="https://formspree.io/your@email.com"
+<form action="https://formspree.io/safdar.kowda@yahoo.com"
       method="POST">
     <input type="text" name="name">
     <input type="email" name="_replyto">
