--- a/time1.html
+++ b/time1.html
@@ -11,6 +11,7 @@
     <input type="text" name="name">
     <input type="email" name="_replyto">
     <input type="submit" value="Send">
+	<input type="hidden" name="_next" value="https://site.io/thanks.html" />
 </form> 
 </body>
 </html> 
