--- a/time1.html
+++ b/time1.html
@@ -8,10 +8,11 @@
 
 <form action="https://formspree.io/safdar.kowda@yahoo.com"
       method="POST">
-    <input type="text" name="name">
-    <input type="email" name="_replyto">
-    <input type="submit" value="Send">
-	<input type="hidden" name="_next" value="https://site.io/thanks.html" />
+    <p>Name </p> <input type="text" name="name"> <b>
+     <p>help </p><input type="text" name="name"><b>
+  <p>hii </p>  <input type="email" name="_replyto"><b>
+  <input type="submit" value="Send">
+	
 </form> 
 </body>
 </html> 
