--- a/time1.html
+++ b/time1.html
@@ -8,11 +8,11 @@
 
 <form action="https://formspree.io/safdar.kowda@yahoo.com"
       method="POST">
-    <p>Name </p> <input type="text" name="name"> <b>
+    <
      <p>help </p><input type="text" name="name"><b>
   <p>hii </p>  <input type="email" name="_replyto"><b>
   <input type="submit" value="Send">
-	
+	<input type="text" name="_gotcha" style="display:none" />
 </form> 
 </body>
 </html> 
