--- a/time1.html
+++ b/time1.html
@@ -13,7 +13,7 @@
   <p>hii </p>  <input type="email" name="_replyto"><b>
   <input type="text" name="_gotcha" style="display:none" />
   <input type="submit" value="Send">
-	
+	<input type="hidden" name="_next" value="thanks.html" />
 </form> 
 </body>
 </html> 
