--- a/time1.html
+++ b/time1.html
@@ -9,8 +9,8 @@
 <form action="https://formspree.io/safdar.kowda@yahoo.com"
       method="POST">
     
-     <p>help </p><input type="text" name="name"><b>
-  <p>hii </p>  <input type="email" name="_replyto"><b>
+     <p>Name </p><input type="text" name="name"><b>
+  <p>Email </p>  <input type="email" name="_replyto"><b>
   <input type="text" name="_gotcha" style="display:none" />
   <input type="submit" value="Send">
 	<input type="hidden" name="_next" value="thanks.html" />
