--- a/time1.html
+++ b/time1.html
@@ -12,6 +12,8 @@
      <p>Name </p><input type="text" name="name"><b>
   <p>Email </p>  <input type="email" name="_replyto"><b>
   <input type="text" name="_gotcha" style="display:none" />
+   <label for="subject"><p>Message</p></label><b>
+    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
   <input type="submit" value="Send">
 	<input type="hidden" name="_next" value="thanks.html" />
 </form> 
