--- a/time1.html
+++ b/time1.html
@@ -14,6 +14,12 @@
   <input type="text" name="_gotcha" style="display:none" />
    <label for="subject"><p>Message</p></label><b>
     <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+	 <label for="country">Country</label>
+    <select id="country" name="country">
+      <option value="australia">Australia</option>
+      <option value="canada">Canada</option>
+      <option value="usa">USA</option>
+    </select>
   <input type="submit" value="Send">
 	<input type="hidden" name="_next" value="thanks.html" />
 </form> 
