--- a/time1.html
+++ b/time1.html
@@ -20,6 +20,16 @@
       <option value="canada">Canada</option>
       <option value="usa">USA</option>
     </select>
+	<label for="person"><p>no of person</p></label><b>
+    <select id="person" name="person">
+      <option value="1">1 Person</option>
+	 <option value="2">2 Persons</option>   
+	<option value="3">3 Persons</option>  
+						<option value="4">4 Persons</option>  
+							<option value="5">5 Persons</option>  
+							<option value="More than 5">More than 5</option> 
+    </select>
+	
   <input type="submit" value="Send">
 	<input type="hidden" name="_next" value="thanks.html" />
 </form> 
