--- a/time1.html
+++ b/time1.html
@@ -29,7 +29,7 @@
 							<option value="5">5 Persons</option>  
 							<option value="More than 5">More than 5</option> 
     </select>
-	<input id="datepicker" name="Text" type="text" placeholder="Date" value="" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'mm/dd/yyyy';}"
+	<input id="datepicker" name="Text" type="date" placeholder="Date" value="" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'mm/dd/yyyy';}"
 					    required="" />
   <input type="submit" value="Send">
 	<input type="hidden" name="_next" value="thanks.html" />
