--- a/time1.html
+++ b/time1.html
@@ -29,6 +29,7 @@
 							<option value="5">5 Persons</option>  
 							<option value="More than 5">More than 5</option> 
     </select>
+	<label for="date"><p>Date</p></label><b>
 	<input id="datepicker" name="Text" type="date" placeholder="Date" value="" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'mm/dd/yyyy';}"
 					    required="" />
   <input type="submit" value="Send">
