--- a/time1.html
+++ b/time1.html
@@ -30,7 +30,7 @@
 							<option value="More than 5">More than 5</option> 
     </select>
 	<label for="date"><p>Date</p></label><b>
-	<input id="datepicker" name="Text" type="date" placeholder="Date" value="" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'mm/dd/yyyy';}"
+	<input id="datepicker" name="date" type="text" placeholder="Date" value="" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'mm/dd/yyyy';}"
 					    required="" />
   <input type="submit" value="Send">
 	<input type="hidden" name="_next" value="thanks.html" />
