--- a/time1.html
+++ b/time1.html
@@ -15,10 +15,10 @@
    <label for="subject"><p>Message</p></label><b>
     <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
 	 <label for="country"><p>Time</p></label><b>
-    <select id="country" name="country">
-      <option value="australia">Breakfast</option>
-      <option value="canada">lunch</option>
-      <option value="usa">Dinner</option>
+    <select id="country" name="Time">
+      <option value="breakfast">Breakfast</option><span>9 to 11</span>
+      <option value="lunch">lunch</option><span>2 to 5</span>
+      <option value="Dinner">Dinner</option><span>8 to 10</span>
     </select>
 	<label for="person"><p>no of person</p></label><b>
     <select id="person" name="person">
