--- a/myrestra/restr.html
+++ b/myrestra/restr.html
@@ -607,7 +607,7 @@
 		<i class="fas fa-envelope"></i>
 		</span>
 		</div>
-		<input type="text" id="text" name="name"" class="form-control form form-control-lg" placeholder="enter your message"> 
+		<input type="text" id="text" name="name" class="form-control form form-control-lg" placeholder="enter your message"> 
 		</div>
 		<!-- input group-->
 		<input type="submit" class="btn btn-block bnt-lg text-uppercase contact-btn" value="Send">
