--- a/myrestra/restr.html
+++ b/myrestra/restr.html
@@ -607,7 +607,9 @@
 		<i class="fas fa-envelope"></i>
 		</span>
 		</div>
-		<input type="text" id="text" name="_gotcha" class="form-control form form-control-lg" placeholder="enter your message"> 
+		<input type="text" name="_gotcha" style="display:none" />
+   <label for="subject">
+    <textarea id="subject" class="form-control form form-control-lg" name="subject" placeholder="Write something.." style="height:200px"></textarea> 
 		</div>
 		<!-- input group-->
 		<input type="submit" class="btn btn-block bnt-lg text-uppercase contact-btn" value="Send">
