--- a/json.html
+++ b/json.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h2>{"heroes":[{"name":"Spiderman","imageurl":"https:\/\/simplifiedcoding.net\/demos\/view-flipper\/images\/spiderman.jpg"},{"name":"Iron Man","imageurl":"https:\/\/simplifiedcoding.net\/demos\/view-flipper\/images\/ironman.jpg"},{"name":"Thor","imageurl":"https:\/\/simplifiedcoding.net\/demos\/view-flipper\/images\/thor.jpg"},{"name":"Wolverine","imageurl":"https:\/\/simplifiedcoding.net\/demos\/view-flipper\/images\/wolverine.jpeg"}]}</h2>
+{"heroes":[{"name":"Spiderman","imageurl":"https:\/\/simplifiedcoding.net\/demos\/view-flipper\/images\/spiderman.jpg"},{"name":"Iron Man","imageurl":"https:\/\/simplifiedcoding.net\/demos\/view-flipper\/images\/ironman.jpg"},{"name":"Thor","imageurl":"https:\/\/simplifiedcoding.net\/demos\/view-flipper\/images\/thor.jpg"},{"name":"Wolverine","imageurl":"https:\/\/simplifiedcoding.net\/demos\/view-flipper\/images\/wolverine.jpeg"}]}
 
 
 </body>
