--- a/json.html
+++ b/json.html
@@ -2,8 +2,9 @@
 <html>
 <body>
 
-{"heroes":[{"name":"Spiderman","imageurl":"https:\/\/simplifiedcoding.net\/demos\/view-flipper\/images\/spiderman.jpg"},{"name":"Iron Man","imageurl":"https:\/\/simplifiedcoding.net\/demos\/view-flipper\/images\/ironman.jpg"},{"name":"Thor","imageurl":"https:\/\/simplifiedcoding.net\/demos\/view-flipper\/images\/thor.jpg"},{"name":"Wolverine","imageurl":"https:\/\/simplifiedcoding.net\/demos\/view-flipper\/images\/wolverine.jpeg"}]}
+{"heroes":[{"name":"Spiderman","imageurl":"https:\/\/safdarkowda.github\/letc.html"},{"name":"Iron Man","imageurl":"https:\/\/simplifiedcoding.net\/demos\/view-flipper\/images\/ironman.jpg"},{"name":"Thor","imageurl":"https:\/\/simplifiedcoding.net\/demos\/view-flipper\/images\/thor.jpg"},{"name":"Wolverine","imageurl":"https:\/\/simplifiedcoding.net\/demos\/view-flipper\/images\/wolverine.jpeg"}]}
 
 
 </body>
 </html>
+https://safdarkowda.github.io/letc.html
