--- a/json.html
+++ b/json.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-
+<script>
 {"heroes":[{"name":"Spiderman","imageurl":"https:\/\/safdarkowda.github\/letc.html"},{"name":"Iron Man","imageurl":"https:\/\/simplifiedcoding.net\/demos\/view-flipper\/images\/ironman.jpg"},{"name":"Thor","imageurl":"https:\/\/simplifiedcoding.net\/demos\/view-flipper\/images\/thor.jpg"},{"name":"Wolverine","imageurl":"https:\/\/simplifiedcoding.net\/demos\/view-flipper\/images\/wolverine.jpeg"}]}
 
-
+</script>
 </body>
 </html>
-https://safdarkowda.github.io/letc.html
