--- a/json.html
+++ b/json.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
-<body>
+<head>
 <script>
 {"heroes":[{"name":"Spiderman","imageurl":"https:\/\/safdarkowda.github\/letc.html"},{"name":"Iron Man","imageurl":"https:\/\/simplifiedcoding.net\/demos\/view-flipper\/images\/ironman.jpg"},{"name":"Thor","imageurl":"https:\/\/simplifiedcoding.net\/demos\/view-flipper\/images\/thor.jpg"},{"name":"Wolverine","imageurl":"https:\/\/simplifiedcoding.net\/demos\/view-flipper\/images\/wolverine.jpeg"}]}
 
+
+
 </script>
+</head>
+<body>
 </body>
 </html>
