--- a/json.html
+++ b/json.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script>
-{"heroes":[{"name":"Spiderman","imageurl":"https:\/\/safdarkowda.github\/letc.html"},{"name":"Iron Man","imageurl":"https:\/\/simplifiedcoding.net\/demos\/view-flipper\/images\/ironman.jpg"},{"name":"Thor","imageurl":"https:\/\/simplifiedcoding.net\/demos\/view-flipper\/images\/thor.jpg"},{"name":"Wolverine","imageurl":"https:\/\/simplifiedcoding.net\/demos\/view-flipper\/images\/wolverine.jpeg"}]}
-
-
-
-</script>
+<script type="text/javascript" src="ha.json"></script>
 </head>
 <body>
 </body>
