--- a/json.html
+++ b/json.html
@@ -2,6 +2,11 @@
 <html>
 <head>
 <script type="text/javascript" src="ha.json"></script>
+<script>
+$.getJSON('ha.json', function(data) {
+    //do stuff with your data here
+});
+</script>
 </head>
 <body>
 </body>
