--- a/json.html
+++ b/json.html
@@ -7,7 +7,7 @@
     $(function() {
 
 
-   var people = [];
+   var heroes = [];
 
    $.getJSON('ha.json', function(data) {
        $.each(data.heroes, function(i, f) {
