--- a/myrestra/restr.html
+++ b/myrestra/restr.html
@@ -21,16 +21,16 @@
  <div class="row">
  <div class="col d-flex justify-content-between align-items-baseline flex-wrap">
  <div class="info-icons p-2 ">
- <a href="#" class="mr-2 primary-color">
+ <a href="#" class="mr-2 secondary-color">
 <i class="fab fa-facebook fa-2x"></i></a>
-<a href="#" class="mr-2 primary-color">
+<a href="#" class="mr-2 secondary-color">
 <i class="fab fa-instagram fa-2x"></i></a>
-<a href="#" class="mr-2 primary-color">
+<a href="#" class="mr-2 secondary-color">
 <i class="fab fa-twitter fa-2x"></i></a>
-<a href="#" class="mr-2 primary-color">
+<a href="#" class="mr-2 secondary-color">
 <i class="fab fa-yelp fa-2x"></i></a>
  </div>
- <h2 class="primary-color p-2 text-capitalize">8325 lociton blvg,los angeles,ca 9871</h2>
+ <h2 class="secondary-color p-2 text-capitalize">Navi Mumbai,India</h2>
  </div>
  </div> 	
  </div>
@@ -41,20 +41,21 @@
  <div class="row height-90 align-items-center justify-content-center">
 	<div class="col">
 	<div class="banner text-center">
-	<h1 class="display-1 text-capitalize w-50 mx-auto">
+	<h1 class="secondary-color display-1 text-capitalize w-50 mx-auto">
 	<small>
-	Sushi
-	</small><strong class="primary-color">moster</strong>
+	Choose your life
+	</small><strong class="secondary-color"></strong>
 	
 	</h1>
-	<a href="" class="btn main-btn sushi btn my-4 text-capitalize">order online</a>
+	<a href="#special-items" class="secondary-color my-4 text-capitalize">Life is not suppose to be wasted. Life is about creating yourself</a>
 	</div>
 	
 	
 	</div>
 	</div>
  </div>
-<a href="#special-items" class="btn header-link primary-color"><i class="fas-fa-Arrow-down"></i></a>
+<!--  <a href="#special-items" class="btn header-link primary-color"><i class="fas-fa-Arrow-down"></i></a>-->
+
 </header>
  
  
@@ -81,9 +82,9 @@
   <!--menu items-->
  <div class="col-10 mx-auto col-sm-6 col-lg-4 my-3">
  <div class="items-container">
- <img src="img/food.jpg" class="img-fluid img-thumbnail item-img" alt="menu item">
- <a href="img/food.jpg">
- <h1 class="text-uppercase">menu items</h1>
+ <img src="img/love1.jpg" class="img-fluid img-thumbnail item-img" alt="menu item">
+ <a href="img/love1.jpg">
+ <h1 class="text-uppercase">Love</h1>
  
  </a>
  </div>
@@ -91,17 +92,17 @@
  
  <div class="col-10 mx-auto col-sm-6 col-lg-4 my-3">
  <div class="items-container">
- <img src="img/shot.jpg" class="img-fluid img-thumbnail item-img" alt="menu item">
- <a href="img/shot.jpg">
- <h1 class="text-uppercase">menu items</h1>
+ <img src="img/happiness2.jpg" class="img-fluid img-thumbnail item-img" alt="menu item">
+ <a href="img/happiness2.jpg">
+ <h1 class="text-uppercase">Happiness</h1>
  
  </a>
  </div>
  </div><div class="col-10 mx-auto col-sm-6 col-lg-4 my-3">
  <div class="items-container">
- <img src="img/imag.jpg" class="img-fluid img-thumbnail item-img" alt="menu item">
- <a href="img/imag.jpg">
- <h1 class="text-uppercase">menu items</h1>
+ <img src="img/gratitude3.jpg" class="img-fluid img-thumbnail item-img" alt="menu item">
+ <a href="img/gratitude3.jpg">
+ <h1 class="text-uppercase">Gratitude</h1>
  
  </a>
  </div>
@@ -109,26 +110,26 @@
  
  <div class="col-10 mx-auto col-sm-6 col-lg-4 my-3">
  <div class="items-container">
- <img src="img/wow.jpg" class="img-fluid img-thumbnail item-img" alt="menu item">
- <a href="img/wow.jpg">
- <h1 class="text-uppercase">menu items</h1>
+ <img src="img/blessings4.jpg" class="img-fluid img-thumbnail item-img" alt="menu item">
+ <a href="img/blessings4.jpg">
+ <h1 class="text-uppercase">Blessings</h1>
  
  </a>
  </div>
  </div><div class="col-10 mx-auto col-sm-6 col-lg-4 my-3">
  <div class="items-container">
- <img src="img/back.jpg" class="img-fluid img-thumbnail item-img" alt="menu item">
- <a href="img/back.jpg">
- <h1 class="text-uppercase">menu items</h1>
+ <img src="img/abundance5.jpg" class="img-fluid img-thumbnail item-img" alt="menu item">
+ <a href="img/abundance5.jpg">
+ <h1 class="text-uppercase">Abundance</h1>
  
  </a>
  </div>
  </div>
  <div class="col-10 mx-auto col-sm-6 col-lg-4 my-3">
  <div class="items-container">
- <img src="img/fla.jpg" class="img-fluid img-thumbnail item-img" alt="menu item">
- <a href="img/fla.jpg">
- <h1 class="text-uppercase">aisa ku</h1>
+ <img src="img/success6.jpg" class="img-fluid img-thumbnail item-img" alt="menu item">
+ <a href="img/success6.jpg">
+ <h1 class="text-uppercase">Success</h1>
  
  </a>
  </div>
@@ -154,7 +155,7 @@
 	<!-- title--> 
 	<div class="row">
  	<div class="col">
-	<h1 class="primary-color text-uppercase"> soups</h1>
+	<h1 class="primary-color text-uppercase">Health</h1>
 	</div>
  </div>
 	<!--end title-->
@@ -163,11 +164,11 @@
 	<div class="single-item d-flex justify-content-between my-3 p-3">
 	</div>
 	<div class="single-item-text">
-		<h2 class="text-uppercase text-dark">soup</h2>
-		<h4 class="text-muted">Lorem ipsum dolor sit amet.</h4>
+		<h2 class="text-uppercase text-dark">personality disorder</h2>
+		<h4 class="text-muted"></h4>
 		</div>
 	 <div class="single-item-price align-self-end">
-     <h1 class="text-uppercase text-dark">$10</h1>
+     <h1 class="text-uppercase text-dark"></h1>
 	 </div>
 	
 	
@@ -178,12 +179,12 @@
 	<div class="single-item d-flex justify-content-between my-3 p-3 special">
 	</div>
 	<div class="single-item-text">
-		<h2 class="text-uppercase text-dark">soup</h2>
-		<h4 class="text-muted">Lorem ipsum dolor sit amet.</h4>
+		<h2 class="text-uppercase text-dark"></h2>
+		<h4 class="text-muted"></h4>
 		</div>
 	 <div class="single-item-price align-self-end">
-     <h1 class="text-uppercase text-dark">$10</h1>
-	 <h3 class="special-text text-capitalize">chef selection</h3>
+     <h1 class="text-uppercase text-dark"></h1>
+	 <h3 class="special-text text-capitalize"></h3>
 	 </div>
 	
 	
@@ -192,7 +193,7 @@
 	<!-- title--> 
 	<div class="row">
  	<div class="col">
-	<h1 class="primary-color text-uppercase"> sushi</h1>
+	<h1 class="primary-color text-uppercase">Psychological issues</h1>
 	</div>
  </div>
 	<!--end title-->
@@ -201,11 +202,11 @@
 	<div class="single-item d-flex justify-content-between my-3 p-3">
 	</div>
 	<div class="single-item-text">
-		<h2 class="text-uppercase text-dark">sushi</h2>
-		<h4 class="text-muted">Lorem ipsum dolor sit amet.</h4>
+		<h2 class="text-uppercase text-dark">Psychosomatic disorder</h2>
+		<h4 class="text-muted"></h4>
 		</div>
 	 <div class="single-item-price align-self-end">
-     <h1 class="text-uppercase text-dark">$10</h1>
+     <h1 class="text-uppercase text-dark"></h1>
 	 </div>
 	
 	
@@ -216,12 +217,12 @@
 	<div class="single-item d-flex justify-content-between my-3 p-3 special">
 	</div>
 	<div class="single-item-text">
-		<h2 class="text-uppercase text-dark">sushi</h2>
-		<h4 class="text-muted">Lorem ipsum dolor sit amet.</h4>
+		<h2 class="text-uppercase text-dark"></h2>
+		<h4 class="text-muted"></h4>
 		</div>
 	 <div class="single-item-price align-self-end">
-     <h1 class="text-uppercase text-dark">$10</h1>
-	 <h3 class="special-text text-capitalize">chef selection</h3>
+     <h1 class="text-uppercase text-dark"></h1>
+	 <h3 class="special-text text-capitalize"></h3>
 	 </div>
 	
 	
@@ -233,7 +234,7 @@
 	<!-- title--> 
 	<div class="row">
  	<div class="col">
-	<h1 class="primary-color text-uppercase"> sushimi  </h1>
+	<h1 class="primary-color text-uppercase"> Finance  </h1>
 	</div>
  </div>
 	<!--end title-->
@@ -242,11 +243,11 @@
 	<div class="single-item d-flex justify-content-between my-3 p-3">
 	</div>
 	<div class="single-item-text">
-		<h2 class="text-uppercase text-dark">sushimi</h2>
-		<h4 class="text-muted">Lorem ipsum dolor sit amet.</h4>
+		<h2 class="text-uppercase text-dark">failures</h2>
+		<h4 class="text-muted"></h4>
 		</div>
 	 <div class="single-item-price align-self-end">
-     <h1 class="text-uppercase text-dark">$10</h1>
+     <h1 class="text-uppercase text-dark"></h1>
 	 </div>
 	
 	
@@ -256,12 +257,12 @@
 	<div class="single-item d-flex justify-content-between my-3 p-3 special">
 	</div>
 	<div class="single-item-text">
-		<h2 class="text-uppercase text-dark">sushimi</h2>
-		<h4 class="text-muted">Lorem ipsum dolor sit amet.</h4>
+		<h2 class="text-uppercase text-dark"></h2>
+		<h4 class="text-muted"></h4>
 		</div>
 	 <div class="single-item-price align-self-end">
-     <h1 class="text-uppercase text-dark">$10</h1>
-	 <h3 class="special-text text-capitalize">chef selection</h3>
+     <h1 class="text-uppercase text-dark"></h1>
+	 <h3 class="special-text text-capitalize"></h3>
 	 </div>
 	
 	
@@ -271,7 +272,7 @@
 	<!-- title--> 
 	<div class="row">
  	<div class="col">
-	<h1 class="primary-color text-uppercase"> sushi</h1>
+	<h1 class="primary-color text-uppercase">Relationships</h1>
 	</div>
  </div>
 	<!--end title-->
@@ -280,11 +281,11 @@
 	<div class="single-item d-flex justify-content-between my-3 p-3">
 	</div>
 	<div class="single-item-text">
-		<h2 class="text-uppercase text-dark">sushi</h2>
-		<h4 class="text-muted">Lorem ipsum dolor sit amet.</h4>
+		<h2 class="text-uppercase text-dark">Relationships issue</h2>
+		<h4 class="text-muted"></h4>
 		</div>
 	 <div class="single-item-price align-self-end">
-     <h1 class="text-uppercase text-dark">$10</h1>
+     <h1 class="text-uppercase text-dark"></h1>
 	 </div>
 	
 	
@@ -295,12 +296,12 @@
 	<div class="single-item d-flex justify-content-between my-3 p-3 special">
 	</div>
 	<div class="single-item-text">
-		<h2 class="text-uppercase text-dark">sushi</h2>
-		<h4 class="text-muted">Lorem ipsum dolor sit amet.</h4>
+		<h2 class="text-uppercase text-dark"></h2>
+		<h4 class="text-muted"></h4>
 		</div>
 	 <div class="single-item-price align-self-end">
-     <h1 class="text-uppercase text-dark">$10</h1>
-	 <h3 class="special-text text-capitalize">chef selection</h3>
+     <h1 class="text-uppercase text-dark"></h1>
+	 <h3 class="special-text text-capitalize"></h3>
 	 </div>
 	
 	
@@ -339,14 +340,14 @@
 	
 	
 	<h2 class="text-muted">	Alok Achkar Peres Petrillo is a Brazilian DJ and record producer. He is best known for his worldwide hit song "Hear Me Now". Alok is managed by John Shahidi of Shots Studios.	</h2>
-	<a href="" class="btn main-btn my-4 text-capitalize">learn more</a>
+	<!--<a href="" class="btn main-btn my-4 text-capitalize">learn more</a>t-->
 	</div>
 	<div class="col-md-6 about-pictures my-4 d-none d-lg-block">
-	<img src="img/food.jpg" alt="" class="img-1 img-thumbnail about-image">
-		<img src="img/shot.jpg" alt="" class="img-2 img-thumbnail about-image">
-			<img src="img/wow.jpg" alt="" class="img-3 img-thumbnail about-image">
-				<img src="img/imag.jpg" alt="" class="img-4 img-thumbnail about-image">
-					<img src="img/fla.jpg" alt="" class="img-5 img-thumbnail about-image">
+	<img src="img/love1.jpg" alt="" class="img-1 img-thumbnail about-image">
+		<img src="img/happiness2.jpg" alt="" class="img-2 img-thumbnail about-image">
+			<img src="img/success6.jpg" alt="" class="img-3 img-thumbnail about-image">
+				<img src="img/blessings4.jpg" alt="" class="img-4 img-thumbnail about-image">
+					<img src="img/gratitude3.jpg" alt="" class="img-5 img-thumbnail about-image">
 	
 	
 	</div>
