--- a/myrestra/restr.html
+++ b/myrestra/restr.html
@@ -43,7 +43,7 @@
 	<div class="banner text-center">
 	<h1 class="secondary-color display-1 text-capitalize w-50 mx-auto">
 	<small>
-	Choose your life
+	Choose your 
 	</small><strong class="secondary-color"></strong>
 	
 	</h1>
