--- a/myrestra/restr.html
+++ b/myrestra/restr.html
@@ -336,10 +336,10 @@
  	<div class="row">
 	<div class="col-md-6 my-4">
 	<div class=""></div>
-	<h1 class="text-uppercase display-3">about us<h1>
+	<h1 class="secondary-color text-uppercase display-3">about us<h1>
 	
 	
-	<h2 class="text-muted">	Alok Achkar Peres Petrillo is a Brazilian DJ and record producer. He is best known for his worldwide hit song "Hear Me Now". Alok is managed by John Shahidi of Shots Studios.	</h2>
+	<h3 class="secondary-color text-uppercase">	I have been a practising Graphologist ( Handwriting Analysts ) since last 18 years. This is a unique and trusted way of getting to the root cause of any problems and solving it completely. The remedies we provide heals a person's life and brings peace, happiness,  success and abundance in their lives.	</h3>
 	<!--<a href="" class="btn main-btn my-4 text-capitalize">learn more</a>t-->
 	</div>
 	<div class="col-md-6 about-pictures my-4 d-none d-lg-block">
