--- a/myrestra/restr.html
+++ b/myrestra/restr.html
@@ -565,10 +565,10 @@
  <div class="row">
  <div class="col-md-6 my-3">
  <div class="embed-repsonsive embed-responsive-21by8 height-60">
- <iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30274.807360497776!2d73.87620455145225!3d18.467757192186017!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2ea8a75f1ed4f%3A0xcc6015e2f426fa4a!2sKondhwa%2C+Pune%2C+Maharashtra!5e0!3m2!1sen!2sin!4v1533224625872" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+ <iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d241412.49890402018!2d72.89307230673934!3d19.016623858459372!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b9f0b81f13ad%3A0x3c12f7681185f869!2sNavi+Mumbai%2C+Maharashtra!5e0!3m2!1sen!2sin!4v1551112746202" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
  
  </div>
- 
+
  </div>
 <div class="col-md-6.my-3 align-self-center">	
 <div class="card text-center">	
@@ -581,7 +581,7 @@
 
 </div>
 <div class="card-body">
-<form action="https://formspree.io/safdar.kowda@yahoo.com"
+<form action="https://formspree.io/grapho777@gmail.com"
       method="POST">
 	    <!-- input group-->
 		<div class="input-group my-3">
