--- a/thanks.html
+++ b/thanks.html
@@ -1,11 +1,10 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-
 <body>
 
 
 
-<h3> Thank You<h3>
+<img src="img/thank.jpg" alt="HTML5 Icon" style="width:128px;height:128px;">
 
 </body>
-</html> 
+</html>
