--- a/thanks.html
+++ b/thanks.html
@@ -4,7 +4,7 @@
 
 
 
-<img src="img/thank.jpg" alt="HTML5 Icon" style="width:128px;height:128px;">
+<img src="thank-you.jpg" alt="HTML5 Icon" style="width:auto;height:auto;">
 
 </body>
 </html>
