--- a/myrestra/restr.html
+++ b/myrestra/restr.html
@@ -372,13 +372,13 @@
   <div class="col-lg-10 mx-auto d-flex justify-content-between review-items py-3">
   <!--image-->
   <div class="align-self-center ml-3">
-  <img src="img/shah.jpg " alt="" class="rounded-circle review-img">
+  <img src="img/shakeel.jpg " alt="" class="rounded-circle review-img">
   </div>
   
   <!---text---->
   <div class="review-text px-5">
-  <h2 class="text-capitalize mb-3 danger-color"> name</h2>
-  <p class="lead text-muted">Shah Rukh Khan, often addressed as King Khan, turns 52 today. In his career of over 25 years, Shah Rukh has seen a meteoric rise in fame and success. A truly global star, Shah Rukh's fame is not limited by geographical boundaries.</p>
+  <h2 class="text-capitalize mb-3 secondary-color"> name</h2>
+  <p class="text-capitalize secondary-color">Shah Rukh Khan, often addressed as King Khan, turns 52 today. In his career of over 25 years, Shah Rukh has seen a meteoric rise in fame and success. A truly global star, Shah Rukh's fame is not limited by geographical boundaries.</p>
 	
   </div>
   </div>
@@ -395,13 +395,13 @@
   <div class="col-lg-10 mx-auto d-flex justify-content-between review-items py-3">
   <!--image-->
   <div class="align-self-center ml-3">
-  <img src="img/shah.jpg " alt="" class="rounded-circle review-img">
+  <img src="img/aqeel.jpg " alt="" class="rounded-circle review-img">
   </div>
   
   <!---text---->
   <div class="review-text px-5">
-  <h2 class="text-capitalize mb-3 danger-color"> name</h2>
-  <p class="lead text-muted"><strong>Shah Rukh Khan, often addressed as King Khan, turns 52 today. In his career of over 25 years, Shah Rukh has seen a meteoric rise in fame and success. A truly global star, Shah Rukh's fame is not limited by geographical boundaries.</strong></p>
+  <h2 class="text-capitalize mb-3 secondary-color"> name</h2>
+  <p class="text-capitalize secondary-color"><strong>Shah Rukh Khan, often addressed as King Khan, turns 52 today. In his career of over 25 years, Shah Rukh has seen a meteoric rise in fame and success. A truly global star, Shah Rukh's fame is not limited by geographical boundaries.</strong></p>
 	
   </div>
   </div>
@@ -418,13 +418,13 @@
   <div class="col-lg-10 mx-auto d-flex justify-content-between review-items py-3">
   <!--image-->
   <div class="align-self-center ml-3">
-  <img src="img/shah.jpg " alt="" class="rounded-circle review-img">
+  <img src="img/sarfaraz1.jpg " alt="" class="rounded-circle review-img">
   </div>
   
   <!---text---->
   <div class="review-text px-5">
-  <h2 class="text-capitalize mb-3 danger-color"> name</h2>
-  <p class="lead text-muted">Shah Rukh Khan, often addressed as King Khan, turns 52 today. In his career of over 25 years, Shah Rukh has seen a meteoric rise in fame and success. A truly global star, Shah Rukh's fame is not limited by geographical boundaries.</p>
+  <h2 class="text-capitalize mb-3 secondary-color"> name</h2>
+  <p class="text-capitalize secondary-color">Shah Rukh Khan, often addressed as King Khan, turns 52 today. In his career of over 25 years, Shah Rukh has seen a meteoric rise in fame and success. A truly global star, Shah Rukh's fame is not limited by geographical boundaries.</p>
 	
   </div>
   </div>
@@ -471,7 +471,7 @@
  <div class="row">
  <div class="col-9 col-sm-6 col-lg-4 mx-auto my-4">
  <div class="card">
- <img src="img/chic.jpg" alt="" class="card-img-top">
+ <img src="img/safdar.jpg" alt="" class="card-img-top">
  <div class="card-body">
  <div class="card-title"> 
  <h1 class="text-capitalize">team member</h1>
@@ -498,7 +498,7 @@
  <div class="row">
  <div class="col-9 col-sm-6 col-lg-4 mx-auto my-4">
  <div class="card">
- <img src="img/chic.jpg" alt="" class="card-img-top">
+ <img src="img/sarfaraz1.jpg" alt="" class="card-img-top">
  <div class="card-body">
  <div class="card-title"> 
  <h1 class="text-capitalize">team member</h1>
@@ -525,7 +525,7 @@
  <div class="row">
  <div class="col-9 col-sm-6 col-lg-4 mx-auto my-4">
  <div class="card">
- <img src="img/chic.jpg" alt="" class="card-img-top">
+ <img src="img/aqeel.jpg" alt="" class="card-img-top">
  <div class="card-body">
  <div class="card-title"> 
  <h1 class="text-capitalize">team member</h1>
