--- a/myrestra/restr.html
+++ b/myrestra/restr.html
@@ -10,6 +10,14 @@
    <link rel="stylesheet" href="css/main.css">
    <!... font awesome...>
    <script src="js/all.js"></script>
+   
+   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-6963780167383626",
+    enable_page_level_ads: true
+  });
+</script>
    <!... google fonts...>
    <link href="https://fonts.googleapis.com/css?family=Oregano:400i" rel="stylesheet">
    <!--magnific-popup-->
