--- a/myrestra/restr.html
+++ b/myrestra/restr.html
@@ -658,7 +658,13 @@
   <script src="js/jquery-3.3.1.min.js"></script>
   <!--bootstrap js-->
 <script src="js/bootstrap.bundle.min.js"> 
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-6963780167383626",
+    enable_page_level_ads: true
+  });
+</script>
 </script>
 <!--ripple-->
 <script src="js/jquery.ripples-min.js"></script>
