--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 <link rel="stylesheet" href="sk_files/css.css">
 <link rel="stylesheet" href="sk_files/font-awesome.css">
 <style>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>
   (adsbygoogle = window.adsbygoogle || []).push({
     google_ad_client: "ca-pub-6963780167383626",
     enable_page_level_ads: true
   });
-</script>
+</script> -->
 body {font-family: "Lato", sans-serif}
 .mySlides {display:none}
 
