--- a/privacy_policy_scanner.html
+++ b/privacy_policy_scanner.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     <h2>Privacy Policy</h2> <p>
-                    safdar kowda built the Covid-19 updates app as
+                    safdar kowda built the Scanner Imagetext updates app as
                     a Free app. This SERVICE is provided by
                     safdar kowda at no cost and is intended for
                     use as is.
@@ -28,7 +28,8 @@
                   </p> <p>
                     The terms used in this Privacy Policy have the same meanings
                     as in our Terms and Conditions, which is accessible at
-                    Covid-19 updates unless otherwise defined in this Privacy
+                    Scanner Imagetext updates unless otherwise defined in this Privacy
+                    Scanner Imagetext updates unless otherwise defined in this Privacy
                     Policy.
                   </p> <p><strong>Information Collection and Use</strong></p> <p>
                     For a better experience, while using our Service,
@@ -112,7 +113,7 @@
                   </p> <p><strong>Contact Us</strong></p> <p>
                     If you have any questions or suggestions about
                     my Privacy Policy, do not hesitate to contact
-                    me at The app gives current Covid-19 updates..
+                    me at The app gives current Scanner Imagetext updates..
                   </p> <p>
                     This privacy policy page was created at
                     <a href="https://privacypolicytemplate.net" target="_blank">privacypolicytemplate.net</a>
